# nl2sql-vanna-langgraph

./: .env.example  .gitignore  EXPLANATION.txt  README.md  langgraph.json  pyproject.toml
data/ddl/: .gitkeep  customers.sql  order_items.sql  orders.sql  products.sql
data/metadata/: customers.yaml  order_items.yaml  orders.yaml  products.yaml  synonyms.yaml
my_agent/: __init__.py  agent.py
my_agent/core/config/: __init__.py  settings.py
my_agent/core/models/: __init__.py
my_agent/core/retrieval/: __init__.py  context_builder.py  context_merger.py  keyword_extractor.py  metadata_store.py  retrieval_pipeline.py  schema_graph.py  telemetry.py  vanna_retriever.py
my_agent/core/retrieval/ranking/: __init__.py  reranker.py
my_agent/core/training/: __init__.py  ingest.py
my_agent/utils/: __init__.py  nodes.py  state.py  tools.py
scripts/: create_sample_db.py  run_e2e.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  schema_context.py
src/retrieval/: __init__.py  context_builder.py  context_merger.py  keyword_extractor.py  metadata_store.py  retrieval_pipeline.py  schema_graph.py  synonym_mapper.py  telemetry.py  vanna_retriever.py
src/retrieval/ranking/: __init__.py  reranker.py
src/training/: __init__.py  ingest.py
tests/: test_agent_graph.py  test_retrieval.py
